# FuturisticConflict

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
project/app/: CMakeLists.txt  main.cpp
project/app/components/: anti_recall.cpp  anti_recall.h  components.h  dice_roll.cpp  dice_roll.h  random_select.cpp  random_select.h  random_utils.cpp  random_utils.h  two_player_game.h
project/app/components/chinitsu/: chinitsu_quiz.cpp  chinitsu_quiz.h  info_table.cpp  info_table.h  tiles.cpp  tiles.h
project/app/components/commands/: command_view.cpp  command_view.h  dev_commands.cpp  dev_commands.h  user_commands.cpp  user_commands.h
project/app/components/othello/: othello_ai.cpp  othello_ai.h  othello_game.cpp  othello_game.h  othello_graphics.cpp  othello_graphics.h  othello_logic.cpp  othello_logic.h
project/app/components/repeat/: repeat.cpp  repeat.h
project/app/components/uttt/: uttt_ai.cpp  uttt_ai.h  uttt_game.cpp  uttt_game.h  uttt_graphics.cpp  uttt_graphics.h  uttt_logic.cpp  uttt_logic.h
project/app/core/: app.cpp  app.h  component.cpp  component.h  config.cpp  config.h  singleton.h
project/app/utils/: image.cpp  image.h  lock_algorithm.h  lock_container.h  random.cpp  random.h  scheduler.h
